--- a/ProyectoBackEnd/src/views/realTimeProducts.handlebars
+++ b/ProyectoBackEnd/src/views/realTimeProducts.handlebars
@@ -1,4 +1,10 @@
+<h2>Realtime product list</h2>
+
+<div class="container">
+
+</div>
 
 
-<script src = "/socket.io/socket.io.js"></script>
-<script src = "index.js"></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script href="../public/index.js"></script>
