--- a/ProyectoBackEnd/src/views/realTimeProducts.handlebars
+++ b/ProyectoBackEnd/src/views/realTimeProducts.handlebars
@@ -1,9 +1,25 @@
 <h2>Realtime product list</h2>
 
 <div class="container">
+    <form id="prodForm">
+        <label for="title">Title:</label><br />
+        <input type="text" id="title" name="title" /><br />
 
+        <label for="description">Description:</label><br />
+        <input type="text" id="description" name="description" /><br />
+
+        <label for="price">Price:</label><br />
+        <input type="number" id="price" name="price" /><br />
+
+        <label for="Code">Code:</label><br />
+        <input type="number" id="Code" name="Code" /><br />
+
+        <label for="Stock">Stock:</label><br />
+        <input type="number" id="Stock" name="Stock" /><br />
+
+        <input type="submit" id="submit" value="Submit" />
+    </form>
 </div>
-
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
