correcciones mayusculas/min

--- a/ProyectoBackEnd/src/views/realTimeProducts.handlebars
+++ b/ProyectoBackEnd/src/views/realTimeProducts.handlebars
@@ -12,10 +12,10 @@
         <input type="number" id="price" name="price" /><br />
 
         <label>Code:</label><br/>
-        <input type="number" id="Code" name="Code" /><br />
+        <input type="number" id="code" name="Code" /><br />
 
         <label>Stock:</label><br/>
-        <input type="number" id="Stock" name="Stock" /><br />
+        <input type="number" id="stock" name="Stock" /><br />
 
         <input type="submit" id="submit" value="Send" />
     </form>
