--- a/ProyectoBackEnd/src/views/realTimeProducts.handlebars
+++ b/ProyectoBackEnd/src/views/realTimeProducts.handlebars
@@ -12,10 +12,13 @@
         <input type="number" id="price" name="price" /><br />
 
         <label>Code:</label><br/>
-        <input type="number" id="code" name="Code" /><br />
+        <input type="number" id="code" name="code" /><br />
 
         <label>Stock:</label><br/>
-        <input type="number" id="stock" name="Stock" /><br />
+        <input type="number" id="stock" name="stock" /><br />
+
+        <label>Category:</label><br/>
+        <input type="text" id="category" name="category" /><br />
 
         <input type="submit" id="submit" value="Send" />
     </form>
